# rust-api-todo

./: .env_template  Cargo.toml  README.md  Rocket.toml  openapi_rust_api_todo.html
src/: appstate.rs  errors.rs  guards.rs  lib.rs  main.rs
src/classes/: categories_model.rs  mod.rs  todo_model.rs  token_model.rs  user_model.rs
src/conn/: mod.rs
src/models/: mod.rs
src/routes/: categories_route.rs  mod.rs  todos_route.rs  user_route.rs
src/services/: categories.rs  mod.rs  todo.rs  user.rs
src/util/: mod.rs
