[package]
name = "rust-api-todo"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket =  { version = "0.5.0", features = ["json"] }
dotenv = "0.15.0"
time = "0.3.31"
chrono = { version = "0.4.31", features = ["serde"] }
postgres = { version = "0.19.7", features = ["with-time-0_3", "with-chrono-0_4"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls" ,"postgres","chrono","json"] }
jsonwebtoken = "9.2.0"
argon2 = "0.5.2"
rand = "0.8.5"
thiserror = "1.0.56"
